--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 						<h2>More projects on  Github  </h2>
 						<!-- <div class="heading"> <h4> I love to solve business problems &amp; uncover hidden data stories </h4>-->
 						<br>
-						<p><a href="https://github.com/Bharathsimhareddykatta" class="btn btn-primary py-3 px-5">GitHub</a></p>
+						<p><a href="https://github.com/charansai1304" class="btn btn-primary py-3 px-5">GitHub</a></p>
 						</div>
 					</div>
 				</div>
@@ -591,7 +591,7 @@
 						<span class="icon-phone2"></span>
 					</div>
 					<h3 class="mb-4">Contact Number</h3>
-				  <p><a href="tel://0101010101">+91 6281316191</a></p>
+				  <p><a href="tel://0101010101">+91 7075501304</a></p>
 				</div>
 			</div>
 			<div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -600,7 +600,7 @@
 						<span class="icon-paper-plane"></span>
 					</div>
 					<h3 class="mb-4">Email Address</h3>
-				  <p><a href="mailto:info@yoursite.com">kattabharatsimhareddy7@gmail.com</a></p>
+				  <p><a href="mailto:info@yoursite.com">garimallasai1304@gmail.com</a></p>
 				</div>
 			</div>
 			<div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -609,7 +609,7 @@
 						<span class="icon-globe"></span>
 					</div>
 					<h3 class="mb-4">Download Resume</h3>
-				  <p><a href="https://drive.google.com/file/d/1chugDwPW2bWQ2VVIHaua3pXpF6e6rFZ1/view">resumelink</a></p>
+				  <p><a href="https://drive.google.com/drive/u/1/home">resumelink</a></p>
 				</div>
 			</div>
   
