--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 										<li class="d-flex"><span>Profile:</span> <span>Data Science &amp; ML Engineer</span></li>
 										<!-- <li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital Marketing</span></li> -->
 										<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering (CSE-AI)</span></li>
-										<li class="d-flex"><span>Language:</span> <span>English, Hindi,Telugu</span></li>
+										<li class="d-flex"><span>Language:</span> <span>English,Telugu</span></li>
 										<li class="d-flex"><span>software Tools:</span> <span>Python,SQL,Data Visualization,ML Libraries,DL &amp;NLP </span></li>
 										<!-- <li class="d-flex"><span>Other Skills:</span> <span>Cloud, PySpark, Excel, Git, JIRA, Google Analytics &amp; SEO</span></li> -->
 										<li class="d-flex"><span>Interest:</span> <span>reading,playing Games,music</span></li>
